[build-system]
requires = [
  "setuptools >= 45",
  "setuptools_scm[toml] >= 7.0.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = false

[tool.isort]
profile = "black"
float_to_top = true
known_third_party = [
  "molecule"
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
