[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-docker
url = https://github.com/ansible-community/molecule-docker
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-docker/issues
    Release Management = https://github.com/ansible-community/molecule-docker/releases
    CI = https://github.com/ansible-community/molecule-docker/actions
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation = https://molecule.readthedocs.io
    Discussions = https://github.com/ansible-community/molecule/discussions
    Source Code = https://github.com/ansible-community/molecule-docker
description = Molecule aids in the development and testing of Ansible roles
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    docker
    testing
    molecule

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    molecule >= 3.0.2
    # selinux python module is needed as least by ansible-docker modules
    # and allows us of isolated (default) virtualenvs. It does not avoid need
    # to install the system selinux libraries but it will provide a clear
    # message when user has to do that.
    selinux; sys_platform=="linux2"
    selinux; sys_platform=="linux"
    docker >= 4.3.1

[options.extras_require]
docs =
    simplejson
    Sphinx
    sphinx_ansible_theme >= 0.2.2
test =
    ansible >= 2.8  # keep it N/N-1

    ansi2html
    coverage < 5  # https://github.com/pytest-dev/pytest-cov/issues/250

    mock>=3.0.5, < 4
    packaging
    pytest-cov>=2.7.1, < 3
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-html>=1.21.0
    pytest-mock>=1.10.4, < 2
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-plus
    pytest-xdist>=1.29.0, < 2
    pytest>=5.4.0, < 5.5
    testinfra >= 3.4.0
lint =
    pre-commit >= 1.21.0

[options.entry_points]
molecule.driver =
    docker = molecule_docker.driver:Docker

[options.packages.find]
where = .

[tool:pytest]
addopts = --doctest-modules --durations 10 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
norecursedirs = dist doc build .tox .eggs
# testpaths = molecule/test/
filterwarnings =
    # treat warnings as errors unless we add them below
    error
    # ignore::UserWarning
markers =
    extensive: marks tests that we want to skip by default, as they are indirectly covered by other tests

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102
# TODO(ssbarnea): remove temporary skips one by one:
# [D102] Missing docstring in public method
# [D104] Missing docstring in public package
# 88 is official black default:
max-line-length = 88
per-file-ignores =
  docs/conf.py: D
  molecule/test/*: D100,D103,D104
