[metadata]
name = molecule-docker
url = https://github.com/ansible-community/molecule-docker
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-docker/issues
    Release Management = https://github.com/ansible-community/molecule-docker/releases
    CI = https://github.com/ansible-community/molecule-docker/actions
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation = https://molecule.readthedocs.io
    Discussions = https://github.com/ansible-community/molecule/discussions
    Source Code = https://github.com/ansible-community/molecule-docker
description = Molecule aids in the development and testing of Ansible roles
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    ansible
    docker
    testing
    molecule

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

# These are required in actual runtime:
install_requires =
    ansible-compat >= 0.5.0
    molecule >= 3.4.0
    # selinux python module is needed as least by ansible-docker modules
    # and allows use of isolated (default) virtualenvs. It does not avoid need
    # to install the system selinux libraries but it will provide a clear
    # message when user has to do that.
    selinux; sys_platform=="linux2"
    selinux; sys_platform=="linux"
    docker >= 4.3.1
    requests  # also required by docker

[options.extras_require]
docs =
    simplejson
    Sphinx
    sphinx_ansible_theme >= 0.2.2
    sphinx-notfound-page
lint =
    pre-commit >= 1.21.0
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    docker = molecule_docker.driver:Docker

[options.packages.find]
where = src

[tool:pytest]
addopts = --doctest-modules --durations 10 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
norecursedirs = dist doc build .tox .eggs

filterwarnings =
    # treat warnings as errors unless we add them below
    error
    # ignore::UserWarning
markers =
    extensive: marks tests that we want to skip by default, as they are indirectly covered by other tests

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102
# TODO(ssbarnea): remove temporary skips one by one:
# [D102] Missing docstring in public method
# [D104] Missing docstring in public package
# 88 is official black default:
max-line-length = 88
per-file-ignores =
  docs/conf.py: D
